# NMODES

./: Cargo.toml  README.md
benches/: saem_benchmark.rs
examples/: example_dataset.csv  one_compartment_dataset.csv  three_compartment_dataset.csv  two_compartment_dataset.csv
src/: lib.rs  main.rs
src/data/: dataset.rs  dosing.rs  individual.rs  mod.rs  observation.rs
src/diagnostics/: mod.rs
src/estimation/: config.rs  foce.rs  mod.rs
src/models/: compartment.rs  mod.rs  one_compartment.rs  three_compartment.rs  two_compartment.rs
src/output/: mod.rs
src/saem/: algorithm.rs  mcmc.rs  mod.rs
src/solver/: mod.rs  ode.rs  runge_kutta.rs
src/validation/: mod.rs
tests/: integration_tests.rs
